# dfsc

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
src/filesystem/: monitor.rs
src/tools/: config.rs  output.rs
tests/: file_changes.rs
