[package]
name = "dfsc"
version = "0.1.2"
description = "Detect file system changes (dfsc) by monitoring a directory recursive and detect changes."
license = "MIT OR Apache-2.0"
authors = [ "Ralf W. <ralf@awalon.de>" ]
readme = "README.md"
repository = "https://github.com/awalon/dfsc/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive", "cargo", "env"] }
notify-debouncer-full = "0.1.0"
notify = "6.0.0"
futures = "0.3.28"